--- a/cgv_phototicket/WebContent/css/phototicket.css
+++ b/cgv_phototicket/WebContent/css/phototicket.css
@@ -24,6 +24,7 @@
 
 /*  [S] btn-toggle   */
 .btn-toggle {display:inline-block;position: absolute;left: -30px;top: -28px;}
+.btn-toggle .white {stroke: #efefef;}
 .btn-toggle .outline {stroke: #efefef;}
 .btn-toggle .check {stroke: #c6c6c6;}
 .btn-toggle.active .outline {transform: rotate(0deg);transform-origin: center;stroke: #fb4357;}
@@ -143,12 +144,12 @@
 #header_box.pt_header nav.type_pt.active::before {content:none;}
 #header_box.pt_header nav.type_pt.active::after {bottom: 5px;}
 #header_box.pt_header nav.type_pt .inner { overflow: hidden }
-#header_box.pt_header nav.type_pt .inner a {color: #666666; font-size: 13px; margin-right: 20px; white-space: nowrap; font-weight: normal}
+#header_box.pt_header nav.type_pt .inner a {width:70px; color: #666666; font-size: 13px; margin-right: 20px; white-space: nowrap; font-weight: normal}
 #header_box.pt_header nav.type_pt .inner a:last-child {margin-right: 0}
 #header_box.pt_header nav.type_pt .inner a.active {color: #fb4357; border-color: #fb4357}
 #header_box.pt_header nav.type_pt .icon_search { color: #666666; border: 0; float: right; text-align: right; margin-right: 0;}
 #header_box.pt_header nav.type_pt .icon_search.active { color: #666666 !important; }
-#header_box.pt_header nav.type_pt .icon_search i {display: inline-block; vertical-align: sub;}
+#header_box.pt_header nav.type_pt .icon_search i {display: inline-block;position: absolute;right: 46px;top: 13px;}
 /** [S]
 	날짜 : 2020.04.24
 	작성자 : 이주연
@@ -173,7 +174,7 @@
 /* [E] 포토티켓 header */
 
 /* [S] 포토티켓 메인 - app */
-.content_wrap.photo_ticket { padding-top: 47px; }
+.content_wrap.photo_ticket { padding-top: 47px; overflow: initial; }
 .content_wrap.photo_ticket .slider_wrap .title { padding-left: 30px; font-size: 22px; line-height: 30px; font-weight: 600; padding-top: 15px; margin-bottom: 19px;}
 .content_wrap.photo_ticket .slider_wrap .swiper-container { width: 260px; margin: 0 auto;}
 .content_wrap.photo_ticket .slider_wrap .swiper-container .swiper-slide { position: relative; text-align:center; display:flex; align-items:center; justify-content:center; margin-bottom: 30px;}
@@ -361,11 +362,11 @@
 .myPhtoticketFlip .swiper-container .swiper-slide .flip-container img { width: 100%; height: 100%; }
 
 .myPhtoticketFlip .swiper-container .swiper-slide .flip-container .flipper {height: 100%; border-radius: 13px;transition: 0.6s;transform-style: preserve-3d;position: relative;}
-.myPhtoticketFlip .front { position: absolute; right: 0; padding: 13px; width: 235px; height: 358px; z-index: 2;border-radius: 12px; box-shadow: 0 6px 14px 0 rgba(0, 0, 0, 0.15);/* for firefox 31 */transform: rotateY(0deg);backface-visibility: hidden;}
+.myPhtoticketFlip .front { position: absolute; right: 0; padding: 13px; width: 235px; height: 358px; z-index: 2;border-radius: 12px; box-shadow: 0 6px 14px 0 rgba(0, 0, 0, 0.15);/* for firefox 31 */transform: rotateY(0deg);backface-visibility: hidden;-webkit-backface-visibility: hidden;}
 .myPhtoticketFlip .front .inner { position: relative; height: 100% }
 .myPhtoticketFlip .front img { width: 209px; height: 332px; border-radius: 8px; }
 
-.myPhtoticketFlip .back { position: absolute; top: 0; padding: 40px 18px 20px 18px; width: 235px; height: 358px; z-index: 2;border-radius: 12px; box-shadow: 0 6px 14px 0 rgba(0, 0, 0, 0.15);backface-visibility: hidden;transform: rotateY(180deg);}
+.myPhtoticketFlip .back { position: absolute; top: 0; padding: 40px 18px 20px 18px; width: 235px; height: 358px; z-index: 2;border-radius: 12px; box-shadow: 0 6px 14px 0 rgba(0, 0, 0, 0.15);-webkit-backface-visibility: hidden;-webkit-transform: rotateY(180deg);}
 .myPhtoticketFlip .back .inner { position: relative; height: 100%; text-align: left}
 .myPhtoticketFlip .back .inner .title { font-size: 12px; color: #898989; line-height: 15px; border-bottom: 1px solid #c3c3c3; margin-bottom: 15px;}
 .myPhtoticketFlip .back .inner .title_lg { font-size: 14px; color: #222222; line-height: 17px; margin-bottom: 2px; font-weight: bold}
@@ -380,6 +381,7 @@
 .myPhtoticketFlip .back .inner .info li.bar span:first-child::after { position: absolute; content: ''; border-right: 1px solid #555555; height: 8px; top:1px; right: 4px; }
 .myPhtoticketFlip .back .inner .bg_grey {width: 100%; height: 90px; background: #f4f4f4;border-radius: 6px; padding: 17px 0 0 0; margin-bottom: 14px;}
 .myPhtoticketFlip .back .inner .bg_grey .number {text-align: center; font-size: 12px; font-weight: bold; line-height: 15px; margin-bottom: 4px; }
+.myPhtoticketFlip .back .inner .bg_grey .number span {font-size: 11px; letter-spacing: -1.5px}
 .myPhtoticketFlip .back .inner .bg_grey .text {text-align: center; color:#555555; font-size: 10px; font-weight: bold; line-height: 13px; letter-spacing: -1px;}
 .myPhtoticketFlip .back .inner .sign .lg {text-align: center; font-size: 13px; font-weight: bold; line-height: 16px; letter-spacing: -.54px;}
 .myPhtoticketFlip .back .inner .sign .sm {text-align: center; color:#898989; font-size: 10px; line-height: 11px;}
@@ -528,7 +530,7 @@
 .popMyPhototicket .popLayerHeader { height: 47px; padding-left: 0; border-bottom: 0}
 .popMyPhototicket .popLayerHeader h1 {line-height: 50px;}
 .popMyPhototicket .popLayerHeader .btn_close { top: 11px; right: 7px;}
-.popMyPhototicket .popLayerHeader .name { padding-left: 20px;letter-spacing: -2px; }
+.popMyPhototicket .popLayerHeader .name { padding-left: 20px;letter-spacing: 0; }
 .popMyPhototicket .popLayerContainer .btn_area { margin-top: 0 }
 .popMyPhototicket .popLayerContainer .btn-red {padding-left: 22px;font-weight: 600;  box-shadow: 0 3px 8px 0 rgba(251, 67, 87, 0.5);}
 /* [E] 내가 자랑한 포토티켓 */
@@ -537,7 +539,7 @@
 .popOtherPhototicket {position:fixed; left:0; bottom:-100%; width:100%; height: 100%; background-color:#fff; z-index:9; overflow: auto;}
 .popOtherPhototicket .popLayerHeader { height: 47px; padding-left: 0; border-bottom: 0}
 .popOtherPhototicket .popLayerHeader .btn_close { top: 9px;}
-.popOtherPhototicket .popLayerHeader .name { padding-left: 20px;letter-spacing: -2px }
+.popOtherPhototicket .popLayerHeader .name { padding-left: 20px;letter-spacing: 0; }
 .popOtherPhototicket .popLayerContainer .btn_area { margin-top: 0 }
 .popOtherPhototicket .popLayerContainer .btn-red { padding-left: 22px;font-weight: 600;box-shadow: 0 3px 8px 0 rgba(251, 67, 87, 0.5) }
 .popOtherPhototicket .popLayerContainer .myPhtoticketFlip.onlyPhoto .front { width: 287px; height: 440px; }
