--- a/cgv_phototicket/WebContent/css/phototicket.css
+++ b/cgv_phototicket/WebContent/css/phototicket.css
@@ -24,11 +24,11 @@
 
 /*  [S] btn-toggle   */
 .btn-toggle {display:inline-block;position: absolute;left: -30px;top: -28px;}
-.btn-toggle .white {stroke: #efefef;}
-.btn-toggle .outline {stroke: #efefef;}
-.btn-toggle .check {stroke: #c6c6c6;}
+.btn-toggle .white-circle {stroke: #efefef; transform:scale(1)}
+.btn-toggle .outline {stroke: #efefef;transform:scale(1)}
+.btn-toggle .check {stroke: #c6c6c6;transform:scale(1)}
 .btn-toggle.active .outline {transform: rotate(0deg);transform-origin: center;stroke: #fb4357;}
-.btn-toggle.active .white-circle {animation: .15s ease-in .15s forwards circle;transform: none;transform-origin: center;}
+.btn-toggle.active .white-circle {animation: .15s ease-in .15s forwards circle; transform: none; transform-origin: center;}
 .btn-toggle.active .check {animation: .1s cubic-bezier(0.65, 0, 1, 1) .3s forwards check;stroke-dasharray: 0, 75px;stroke: #ffffff;}
 .btn-toggle.active .check-group {animation: .1s ease-in-out check-group;transform-origin: center;}
 /*  [E] btn-toggle   */
@@ -176,9 +176,9 @@
 /* [S] 포토티켓 메인 - app */
 .content_wrap.photo_ticket { padding-top: 47px; overflow: initial; }
 .content_wrap.photo_ticket .slider_wrap .title { padding-left: 30px; font-size: 22px; line-height: 30px; font-weight: 600; padding-top: 15px; margin-bottom: 19px;}
-.content_wrap.photo_ticket .slider_wrap .swiper-container { width: 260px; margin: 0 auto;}
+.content_wrap.photo_ticket .slider_wrap .swiper-container { width: 260px; margin: 0 auto; overflow: visible}
 .content_wrap.photo_ticket .slider_wrap .swiper-container .swiper-slide { position: relative; text-align:center; display:flex; align-items:center; justify-content:center; margin-bottom: 30px;}
-.content_wrap.photo_ticket .slider_wrap .swiper-container .swiper-slide .poster {width: 100%; height: 360px; border-radius: 20px; cursor: pointer;transition: 0.3s}
+.content_wrap.photo_ticket .slider_wrap .swiper-container .swiper-slide .poster {width: 260px; height: 370px; border-radius: 20px; cursor: pointer;transition: 0.3s}
 .content_wrap.photo_ticket .slider_wrap .swiper-container .swiper-slide .poster::after {content:''; position: absolute; width: 100%; height: 360px; border-radius: 20px; top: 0; left: 0; box-shadow: 0 10px 20px rgba(0,0,0,.3); z-index: -1;}
 .content_wrap.photo_ticket .slider_wrap .swiper-container .swiper-slide .poster img { width: 100%; height: 100%; border-radius: 20px;}
 
@@ -222,16 +222,15 @@
 /* [E] 이벤트 슬라이더    */
 
 /* [S] 이벤트 광고 영역    */
-.content_wrap.photo_ticket .eventBannerWrap { position: relative; height: 90px; background-color: #FFF0BA; text-align: center;}
-.content_wrap.photo_ticket .eventBannerWrap a { display: block; }
+.content_wrap.photo_ticket .eventBannerWrap { position: relative;width: auto;height: auto; background-color: #FFF0BA; text-align: center;}
 .content_wrap.photo_ticket .eventBannerWrap a img { width: 320px; height: 90px; }
 /* [E] 이벤트 광고 영역    */
 
 /*  [S] 포토티켓 - 헤더 컴포넌트    */
 .photo_ticket .title_wrap {position: relative; padding: 0 15px; height: 60px; margin-bottom: 13px;}
 .photo_ticket .title_wrap .title {float: left; font-size: 17px; font-weight: bold; left: 15px; top: 22px; letter-spacing: 0; line-height: 60px;}
-.photo_ticket .title_wrap .all {float: right; font-size: 14px;}
-.photo_ticket .title_wrap .all .btn-all {display: block; font-size: 14px; font-weight: 500; color: #999999; padding: 15px 9px 15px 15px; line-height: 30px;}
+.photo_ticket .title_wrap .all {position: absolute;right: 0;}
+.photo_ticket .title_wrap .all .btn-all {display: block; font-size: 14px; font-weight: 500; color: #999999; padding: 15px 27px 15px 15px; line-height: 30px;}
 .photo_ticket .title_wrap .all .btn-all i {display: inline-block; position: absolute; top: 23px; right: 17px;}
 .photo_ticket .title_wrap .title .badge {width: 100px; height: 25px; display: inline-block; color: #fb4357; font-weight: 500; font-size: 12px; line-height: 23px; text-align: center; border: 1px solid #fb4357; border-radius: 12px; margin-left: 4px;transform: translateY(-1px);}
 /*  [E] 포토티켓 - 헤더 컴포넌트    */
@@ -418,7 +417,7 @@
 .myPhtoticketFlip .btn_area .inner > div a:first-child {margin-right: 2px;}
 
 /* 포토티켓 플립 슬라이더 - web */
-.myPhtoticketFlip.web .swiper-container { width: 100%; overflow: auto; padding: 0 14px; }
+.myPhtoticketFlip.web .swiper-container { width: 100%; overflow: auto; padding: 0 30px; }
 .myPhtoticketFlip.web .swiper-container .swiper-slide { width: 260px;margin-right: 29px;}
 
 /* [S] 포토티켓만 한개만 보여질 경우  */
@@ -444,7 +443,7 @@
 .photo_ticket .pop_header a {line-height: 55px;}
 .photo_ticket .pop_header .btn_share {position: absolute;left: 15px;top: 9px;}
 .photo_ticket .pop_header > div {width: 100%;height: 47px;padding-top: 14px;}
-.photo_ticket .pop_header .badge {width: 219px;height: 30px;line-height: 30px;border:1px solid transparent; border-radius: 15px;color: #ffffff;margin: 0 auto;text-align: center;}
+.photo_ticket .pop_header .badge {width: 219px;height: 30px;line-height: 28px;border:1px solid transparent; border-radius: 15px;color: #ffffff;margin: 0 auto;text-align: center;}
 .photo_ticket .pop_header .badge.badge_blue {background: #209eff;}
 .photo_ticket .pop_header .badge.badge-red {background: var(--watermelon);}
 .photo_ticket .pop_header .badge.badge_grey {width: 194px; background: rgb(231,231,231);color:#222222}
@@ -491,7 +490,7 @@
 .photo_ticket .row {display: flex;flex-wrap: wrap;}
 .photo_ticket .inputBox {position: relative; padding: 0 20px; overflow: hidden}
 .photo_ticket .inputBox:before {content: '~';position: absolute;left: 50%;top: 12px;display: block;margin-left: -3px;}
-.photo_ticket .inputBox span {width: 47%; display: block;height: 36px;line-height: 36px;}
+.photo_ticket .inputBox span {width: 46%; display: block;height: 36px;line-height: 36px;}
 .photo_ticket .inputBox span:first-child {float: left;}
 .photo_ticket .inputBox span:last-child {float: right;}
 .photo_ticket .inputBox span input[type='date'] {position: relative;display: block;width: 100%;font-size: 14px;text-indent: 10px;line-height: 36px; border:0; color:rgb(102,102,102); border-radius: 8px;background: rgba(242,242,242,.8);}
@@ -555,153 +554,18 @@
 	.photo_ticket .card_wrap .badge .dday { font-size: 16px; padding-top: 13px; margin-bottom: 3px; }
 	.photo_ticket .card_wrap .card .img { left: 10px; }
 	.photo_ticket .title_wrap .title .badge { width: 85px; font-size: 10px; line-height: 25px; }
-	.photo_ticket .title_wrap .all .btn-all { padding: 15px 9px 15px 0; }
+	.photo_ticket .title_wrap .title {letter-spacing: -1.5px; }
+	.photo_ticket .title_wrap .all .btn-all { padding: 15px 22px 15px 0;; }
+	.photo_ticket .title_wrap .all .btn-all i {right: 13px;}
 }
 @media only screen and (min-height: 735px) {
-	.myPhtoticketFlip .swiper-container {height: 470px; transform: translate(12px,-8px);;margin-bottom: 49px !important;}
+	.myPhtoticketFlip .swiper-container {height: 470px;margin-bottom: 49px !important;}
 	.myPhtoticketFlip .front {width: 262px;height: 398px;}
 	.myPhtoticketFlip .back {width: 262px;height: 398px;}
 	.myPhtoticketFlip .swiper-container-horizontal>.swiper-pagination-bullets {bottom: -2px;}
 }
 @media only screen and (min-width: 375px) {
 	.cgvMovieChartWrap .btnFirstMove {top: 185px;}
-}
-.btn-red.active {
-	position: relative;
-}
-.btn-red.active .sprite-icBtnLikeNorLarge{
-	position: relative;
-	-webkit-animation-duration: 0.35s;
-	animation-duration: 0.35s;
-	-webkit-animation-name: test;
-	animation-name: test;
-}
-.btn-red.active::after{
-	content: '';
-	position: absolute;
-	display: inline-block;
-	width: 25px;
-	height: 25px;
-	background: url("../images/phototicket/common/ic_btn_like_nor.png") no-repeat;
-	animation-delay: 1s;
-	-webkit-animation-name: opacity;
-	animation-name: opacity;
-	top: 13px;
-	left: 57px;
-}
-.btn-red.active path{
-	-webkit-animation-duration: 0.55s;
-	animation-duration: 0.55s;
-	animation-delay: 0.25s;
-	animation-name: zoomIn;
-	fill: #ffffff;
-}
-.btn-test {
-	position: relative;
-	display: inline-block;
-	width: 135px;
-	height: 44px;
-	border-radius: 22px;
-	line-height: 44px;
-	font-size: 16px;
-	background-color: var(--watermelon);
-	border: 1px solid var(--watermelon);
-	color: #ffffff;
-	font-weight: bold;
-	letter-spacing: -.5px;
-}
-.btn-test.btn-lg {
-	width: 165px;
-	height: 50px;
-	line-height: 48px;
-	border-radius: 25px;
-	font-size: 18px;
-	padding-left: 22px;
-	font-weight: 600;
-	box-shadow: 0 3px 8px 0 rgba(251, 67, 87, 0.5);
-	color: #ffffff;
-}
-.btn-test i {
-	position: absolute;
-	left: 56px;
-	top: 11px;
-}
-.btn-test.active::after{
-	content: '';
-	position: absolute;
-	display: inline-block;
-	width: 25px;
-	height: 25px;
-	background: url("../images/phototicket/common/ic_btn_like_nor.png") no-repeat;
-	animation-duration: .5s;
-	-webkit-animation-name: fill;
-	animation-name: fill;
-	top: 13px;
-	left: 57px;
-}
-.btn-test.active i{
-	animation-duration: .5s;
-	-webkit-animation-name: stroke;
-	animation-name: stroke;
-}
-.btn-test2 {
-	position: relative;
-	display: inline-block;
-	width: 135px;
-	height: 44px;
-	border-radius: 22px;
-	line-height: 44px;
-	font-size: 16px;
-	background-color: var(--watermelon);
-	border: 1px solid var(--watermelon);
-	color: #ffffff;
-	font-weight: bold;
-	letter-spacing: -.5px;
-}
-.btn-test2.btn-lg {
-	width: 165px;
-	height: 50px;
-	line-height: 48px;
-	border-radius: 25px;
-	font-size: 18px;
-	padding-left: 22px;
-	font-weight: 600;
-	box-shadow: 0 3px 8px 0 rgba(251, 67, 87, 0.5);
-	color: #ffffff;
-}
-.btn-test2 i {
-	position: absolute;
-	left: 56px;
-	top: 11px;
-}
-.btn-test2.active::after{
-	content: '';
-	position: absolute;
-	display: inline-block;
-	width: 25px;
-	height: 25px;
-	background: url("../images/phototicket/common/ic_btn_like_nor.png") no-repeat;
-	animation-duration: .5s;
-	-webkit-animation-name: fill;
-	animation-name: fill;
-	top: 13px;
-	left: 57px;
-}
-.btn-test2.active i {
-	animation-duration: .5s;
-	-webkit-animation-name: stroke;
-	animation-name: stroke;
-}
-@keyframes test{
-	0%{
-		transform: scale(1);
-	}
-	33%{
-		transform: scale(1.8);
-	}
-	100% {
-		transform: scale(1);
-	}
 }
 @keyframes stroke{
 	0%{
@@ -1069,7 +933,7 @@
 }
 .md-btn:hover {
 	color: #ffffff;
- }
+}
 /*
  Ripple
 */
@@ -1079,9 +943,8 @@
 	background: #ffffff;
 	color: var(--watermelon);
 	border: 1px solid var(--watermelon);
-	transition: background .2s;
+	transition: background .5s;
 }
-
 .md-btn-ripple.on::after {
 	content: '';
 	display: block;
@@ -1092,17 +955,9 @@
 	left: 50px;
 	border-radius: 50%;
 	background: rgba(255,255,255,.8);
-	animation: md-btn-ripple 0.6s ease-out;
+	animation: md-btn-ripple .5s ease-in;
 	opacity: 0;
 }
-/*.md-btn-ripple2 {*/
-/*	background: #ffffff;*/
-/*	color: var(--watermelon);*/
-/*	border: 1px solid var(--watermelon);*/
-/*}*/
-/*.md-btn-ripple2:hover {*/
-/*	color: var(--watermelon);*/
-/*}*/
 .md-btn-ripple.off {
 	overflow: hidden;
 	position: relative;
@@ -1111,7 +966,6 @@
 	color: #ffffff;
 	opacity: 1;
 }
-
 .md-btn-ripple.off::after {
 	content: '';
 	display: block;
@@ -1122,7 +976,7 @@
 	left: 50px;
 	border-radius: 50%;
 	background: rgba(251,67,87,.8);
-	animation: md-btn-ripple2 .2s ease-out;
+	animation: md-btn-ripple2 .5s ease-in;
 	opacity: 0;
 }
 @keyframes md-btn-ripple {
@@ -1134,8 +988,8 @@
 		transform: scale(2);
 	}
 	50% {
-		 transform: scale(3);
-	 }
+		transform: scale(3);
+	}
 	100% {
 		transform: scale(4);
 		opacity: 0;
@@ -1157,7 +1011,3 @@
 		transform: scale(4);
 	}
 }
-
-
-
-
