--- a/KAI/src/pcss/style/modules/layout.pcss
+++ b/KAI/src/pcss/style/modules/layout.pcss
@@ -20,6 +20,7 @@
     height: 80px;
     background-color: #ffffff;
     z-index: 100 !important;
+    border-bottom: 1px solid #E5E5E5;
 
     & .inner {
         position: relative;
