--- a/KAI/src/pcss/style/modules/page.pcss
+++ b/KAI/src/pcss/style/modules/page.pcss
@@ -6,15 +6,16 @@ a {
 .sec-main {
     width: 100%;
     margin: 0 auto 81px;
-    height: 780px;
+    height: 700px;
     background-color: #000008;
     & .inner {
         position: relative;
+        width: 1200px;
+        height: 100%;
+        margin: 0 auto;
+
         & .img {
             display: block;
-            width: 1200px;
-            height: 100%;
-            margin: 0 auto;
             & img {
                 width: 100%;
                 height: 100%;
@@ -27,8 +28,8 @@ a {
             font-size: 36px;
             color: #ffffff;
             top: 50%;
-            left: 50%;
-            transform: translate(-100%, -50%);
+            left: 90px;
+            transform: translateY(-50%);
         }
     }
 }
@@ -295,12 +296,12 @@ a {
                 width: 380px;
                 height: 100%;
                 text-align: center;
-                border-right: 2px solid transparent;
-                border-left: 2px solid transparent;
-                border-top: 2px solid transparent;
+                border-right: 0;
+                border-left: 0;
+                border-top: 0;
                 border-bottom: 2px solid var(--color-text-default);
                 background-color: #ffffff;
-                padding-top: 1px;
+                padding-top: 2px;
 
                 & > a {
                     display: block;
@@ -312,7 +313,7 @@ a {
                     border-right: 2px solid var(--color-text-default);
                     border-left: 2px solid var(--color-text-default);
                     border-top: 2px solid var(--color-text-default);
-                    border-bottom: 1px solid #F2F2F2;
+                    border-bottom: 0;
 
                     & > a {
                         font-size: 24px;
